[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.9',
]
dependencies = [
  'numpy>=1.21',
  'packaging',
  'psutil',
  'pyvista',
  'pyvistaqt',
  'qtm_rt',
  'qtpy',
]
description = 'Template for python projects.'
keywords = [
  'python',
  'mri',
  'motion-capture',
  'qtm',
  'brush',
  'tactile',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'mri_qtm_brush'
readme = 'README.md'
requires-python = '>=3.9'
version = '0.1.0'

[project.optional-dependencies]
all = [
  'mri_qtm_brush[build]',
  'mri_qtm_brush[style]',
  'mri_qtm_brush[test]',
]
build = [
  'build',
  'twine',
]
full = [
  'mri_qtm_brush[all]',
]
style = [
  'bibclean',
  'black',
  'codespell',
  'isort',
  'pydocstyle[toml]',
  'ruff',
  'toml-sort',
]
test = [
  'pytest',
  'pytest-cov',
  'pytest-timeout',
]

[project.scripts]
mri_qtm_brush-sys_info = 'mri_qtm_brush.commands.sys_info:run'

[project.urls]
documentation = 'https://github.com/mscheltienne/mri-qtm-brush'
homepage = 'https://github.com/mscheltienne/mri-qtm-brush'
source = 'https://github.com/mscheltienne/mri-qtm-brush'
tracker = 'https://github.com/mscheltienne/mri-qtm-brush/issues'

[tool.black]
extend-exclude = '''
(
      __pycache__
    | .github
    | setup.py
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py39']

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/mri_qtm_brush/_version.py',
  '**/mri_qtm_brush/commands/*',
  '**/mri_qtm_brush/utils/_fixes.py',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  'setup.py',
]
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 39

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^mri_qtm_brush.*'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []
minversion = '6.0'

[tool.ruff]
extend-exclude = [
  "doc",
  "setup.py",
]
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['mri_qtm_brush*tests']
include = ['mri_qtm_brush*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
