[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
dependencies = [
  'numpy>=1.21',
  'packaging',
  'psutil',
  'pyvista',
  'pyvistaqt',
  'qtm_rt',
  'qtpy',
]
description = 'Template for python projects.'
keywords = [
  'brush',
  'motion-capture',
  'mri',
  'python',
  'qtm',
  'tactile',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'mri_qtm_brush'
readme = 'README.md'
requires-python = '>=3.10'
version = '0.1.0'

[project.optional-dependencies]
all = [
  'mri_qtm_brush[build]',
  'mri_qtm_brush[style]',
  'mri_qtm_brush[test]',
]
build = [
  'build',
  'twine',
]
full = [
  'mri_qtm_brush[all]',
]
style = [
  'codespell[toml]>=2.2.4',
  'pre-commit',
  'ruff>=0.6.0',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest',
  'pytest-cov',
  'pytest-timeout',
]

[project.scripts]
mri_qtm_brush-sys_info = 'mri_qtm_brush.commands.sys_info:run'

[project.urls]
documentation = 'https://github.com/fcbg-platforms/mri-qtm-brush'
homepage = 'https://github.com/fcbg-platforms/mri-qtm-brush'
source = 'https://github.com/fcbg-platforms/mri-qtm-brush'
tracker = 'https://github.com/fcbg-platforms/mri-qtm-brush/issues'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/mri_qtm_brush/_version.py',
  '**/mri_qtm_brush/commands/*',
  '**/mri_qtm_brush/utils/_fixes.py',
  '**/tests/**',
]

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []
minversion = '6.0'

[tool.ruff]
extend-exclude = []
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'D', 'E', 'F', 'G', 'I', 'LOG', 'NPY', 'PIE', 'PT', 'T20', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904', # 'Within an except clause, raise exceptions with raise ... from ...'
  'D100', # 'Missing docstring in public module'
  'D104', # 'Missing docstring in public package'
  'D107', # 'Missing docstring in __init__'
]
'__init__.py' = ['F401']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
ignore-decorators = ["mri_qtm_brush.utils._docs.copy_doc"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['mri_qtm_brush*tests']
include = ['mri_qtm_brush*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
